@@ -22,9 +22,11 @@ if [ ! -d "${GC_LOG_DIR}" ]; then
 fi
 
 java -server  \
+	-XX:-UseBiasedLocking  \
 	-XX:AutoBoxCacheMax=20000  \
 	-XX:+AlwaysPreTouch  \
 	-XX:+UseConcMarkSweepGC  \
+	-XX:+CMSScavengeBeforeRemark  \
 	-XX:+UseCMSInitiatingOccupancyOnly  \
 	-XX:CMSInitiatingOccupancyFraction=75  \
 	-XX:MaxTenuringThreshold=6  \
